--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,8 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: compass_quiz
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
