--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+# Ignore development configuration.
+/config/database.yml
+/.env
 
 # Ignore all logfiles and tempfiles.
 /log/*
